# -Devanagari-Character-Recognizer-using-C-

./: CMakeLists.txt  Devanagari detection .pb  Devnagiri.cpp  README.md
